# SFML-3DTest

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  readme.md
Assets/Shaders/: Diffuse.vert
include/: DrawableObject.h  Engine.h  ModelLoader.h  drawableObject.h  engine.h  stdfx.h
src/: DrawableObject.cpp  Engine.cpp  Main.cpp  ModelLoader.cpp  engine.cpp  fragment.glsl  main.cpp
